2012-07-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/xzembed/xz_dec_stream.c (hash_validate): Fix behaviour
	if hash function is unavailable.
	(dec_stream_header): Likewise.

2012-07-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/autofs.c (autoload_fs_module): Save and restore
	filter state.

2012-07-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix coreboot compilation.

	* grub-core/term/i386/pc/vga_text.c (grub_vga_text_init): Rename to ...
	(grub_vga_text_init_real): ... this.
	(grub_vga_text_fini): Rename to ...
	(grub_vga_text_fini_real): ... this.

2012-07-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am: Fix path to boot/i386/pc/startup_raw.S.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c: Support clear and testload.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/efi/serial.c: Support 1.5 stop bits.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c: Experimental support for 64-bit.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c (ack): Fix endianness problem.
	(tftp_receive): Likewise.
	Reported by: Michael Davidsaver.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Make mans depend on grub-mkconfig_lib.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE): New macro.
	* include/grub/command.h (FOR_COMMANDS_SAFE): Likewise.
	* grub-core/commands/help.c (grub_cmd_help): Use FOR_COMMANDS_SAFE.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (find_efi_mmap_size): Don't decrease
	efi_mmap_size.
	Reported by: Stuart Hayes.

2012-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Add monochrome text support (mda_text, aka `hercules' in grub-legacy).

	* grub-core/Makefile.core.def (mda_text): New module.